Fix scrollbar thumb blending with background
 When "Alternate list background colour" is enabled, the torrent list blends with the scrollbar thumb

before: http://i.imgur.com/syM2NlU.png
after: http://i.imgur.com/lKsbL9e.png

--- a/plugins/theme/themes/Oblivion/style.css
+++ b/plugins/theme/themes/Oblivion/style.css
@@ -210,4 +210,18 @@ span.det {color:#fff;}
 
 .meter-value-start-color { background-color: #E05400 }
 .meter-value-end-color { background-color: #8FBC00 }
-::-webkit-scrollbar {width:12px;height:12px;padding:0px;margin:0px;}
+::-webkit-scrollbar {
+    width: 15px;
+    height: 15px;
+}
+::-webkit-scrollbar-thumb {
+    height: 12px;
+    border: 3px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+    display: none;
+}
